--- a/proizvod/regandaut/templates/regandaut/registration.html
+++ b/proizvod/regandaut/templates/regandaut/registration.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Регистрация</title>
   <link rel="stylesheet" href="{% static 'regandaut/css/register.css' %}">
+  <link rel="icon" href="https://static.vecteezy.com/system/resources/thumbnails/046/805/074/small/white-star-blink-free-png.png">
 </head>
 <body class="register-page">
   <div class="container">
