--- a/proizvod/eventpage/templates/eventpage/event.html
+++ b/proizvod/eventpage/templates/eventpage/event.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="content">
             <div class="event-image">
-                <img src="/static/eventpage/img/image.png" alt="Event poster">
+                <img src="/static/eventpage/img/{{ event.image }}" alt="Event poster">
             </div>
             <div class="event-details">
                 <h2>{{ event.name }}</h2>
