--- a/proizvod/eventpage/templates/eventpage/event.html
+++ b/proizvod/eventpage/templates/eventpage/event.html
@@ -16,7 +16,9 @@
     </a>
             <div class="search-box">
                 <div class="logo">
-                  <img src="/static/eventpage/img/logo.png" alt="TicketSpace Logo">
+                  <a href="/">
+                    <img src="/static/mainpage/img/logo_main.PNG" alt="TicketSpace Logo">
+                  </a>
                 </div>
                 <div class="search-bar">
                     <form method="POST" action="{% url 'search' %}">
