--- a/proizvod/eventpage/templates/eventpage/buy.html
+++ b/proizvod/eventpage/templates/eventpage/buy.html
@@ -16,6 +16,9 @@
 </script>
 </head>
 <body>
+    <a href="/" class="back-arrow">
+          <img src="/static/eventpage/img/arrow.png" alt="<--">
+            </a>
     <div class="ticket">
         <div class="ticket-right">
             <div class="ticket-image">
