--- a/proizvod/regandaut/static/regandaut/css/register.css
+++ b/proizvod/regandaut/static/regandaut/css/register.css
@@ -62,6 +62,11 @@ body {
     color: #ffffff;
   }
 
+input:focus {
+   outline: none;
+   box-shadow: none;
+}
+
 .link {
   color: #ffffff;
   font-size: 1rem;
