всякие последние изменения

--- a/proizvod/eventpage/templates/eventpage/search.html
+++ b/proizvod/eventpage/templates/eventpage/search.html
@@ -41,7 +41,9 @@
                 </div>
 
                 <div class="profile">
-                  <img src="/static/eventpage/img/profile.PNG" alt="Profile">
+                  <button onclick="window.location.href='/user/'">
+                        <img src="/static/mainpage/img/profile.PNG" alt="Profile">
+                    </button>
                 </div>
               </div>
     </header>
