--- a/proizvod/mainpage/templates/mainpage/main_page.html
+++ b/proizvod/mainpage/templates/mainpage/main_page.html
@@ -76,7 +76,7 @@
                 </div>
 
                 <div class="profile">
-                    <button>
+                    <button onclick="window.location.href='/user/'">
                         <img src="/static/mainpage/img/profile.PNG" alt="Profile">
                     </button>
                 </div>
@@ -232,7 +232,7 @@
             <div class="aitu-card-content">
               <h2 class="aitu-card-title">Карта </h2>
               <h3 class="aitu-card-description">Так вам будет легче найти мероприятие!</h3>
-              <button class="aitu-card-button">Открыть</button>
+              <button class="aitu-card-button" onclick="window.location.href='/map/'">Открыть</button>
             </div>
             <div class="aitu-card-image">
                 <button>
