--- a/proizvod/eventpage/static/eventpage/css/style.css
+++ b/proizvod/eventpage/static/eventpage/css/style.css
@@ -195,6 +195,15 @@ header {
     display: block;
 }
 
+/* кнопка профиля */
+.profile button {
+    background: none;
+    border: none;
+    padding: 0;
+    margin: 0;
+    cursor: pointer;
+}
+
 .profile img {
   width: 38px;
   height: auto;
