всякие последние изменения

--- a/proizvod/mainpage/templates/mainpage/main_page.html
+++ b/proizvod/mainpage/templates/mainpage/main_page.html
@@ -97,10 +97,10 @@
                 <img src="/static/mainpage/img/halloween_afisha.PNG" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="/static/mainpage/img/halloween_afisha.PNG" class="d-block w-100" alt="...">
+                <img src="/static/mainpage/img/vidzhet.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="/static/mainpage/img/halloween_afisha.PNG" class="d-block w-100" alt="...">
+                <img src="/static/mainpage/img/chposter.jpg" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -236,7 +236,7 @@
             </div>
             <div class="aitu-card-image">
                 <button>
-                    <img src="/static/mainpage/img/map.png" alt="карта">
+                    <img src="/static/mainpage/img/mapimapi.png" alt="карта">
                 </button>
               <div class="aitu-placeholder"></div>
             </div>
