--- a/proizvod/mainpage/static/mainpage/css/main_styles.css
+++ b/proizvod/mainpage/static/mainpage/css/main_styles.css
@@ -15,8 +15,8 @@ body {
     color: white;
     margin: 0;
     background:
-      linear-gradient(180deg, rgba(47, 52, 105, 0.9), rgba(134, 141, 212, 0.9)),
-      url('/static/mainpage/img/stars.PNG') no-repeat center center;
+     url('/static/mainpage/img/stars.PNG') no-repeat center center,
+     linear-gradient(180deg, rgba(47, 52, 105, 0.9), rgba(134, 141, 212, 0.9));
     background-size: cover;
     color: white;
   }
@@ -420,11 +420,11 @@ footer {
   /* Секции футера */
   .footer-section {
     flex: 1 1 300px;
-    max-width: 350px;
+    max-width: 400px;
   }
 
   .ticket-logo img {
-     width: 197px;
+     width: 200px;
      height: 135px;
   }
 
@@ -476,7 +476,7 @@ footer {
   /* Заголовки секций */
   .footer-section h4 {
     margin-bottom: 10px;
-    margin-left: 10%;
+    margin-left: 8%;
     font-size: 1.2rem;
   }
 
